@@ -14,6 +14,7 @@ EDS-28 Make EDS shorter if no preselected IdPs have logos
 EDS-48 Be more specific about the image size.
 EDS-59 Minify the CSS for the EDS
 EDS-40 Remove JSON from default minified code
+EDS-51 Parameter ignoreURLParams completely ignores any params and makes EDS fully standalone.
 
 Changed in V1.0.3
 =============================================
